--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.31.0",
+    "react-query-auth": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
